--- a/services/test/public/index.html
+++ b/services/test/public/index.html
@@ -27,7 +27,27 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>
+      const isDarkMode = window.matchMedia(
+        "(prefers-color-scheme: dark)"
+      ).matches;
+
+      if (isDarkMode) {
+        document.body.classList.add("theme-dark");
+      }
+
+      const mediaQueryList = window.matchMedia("(prefers-color-scheme: dark)");
+
+      mediaQueryList.addEventListener("change", (e) => {
+        const isDarkMode = e.matches;
+
+        if (isDarkMode) {
+          document.body.classList.add("theme-dark");
+        } else {
+          document.body.classList.remove("theme-dark");
+        }
+      });
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
